
syntax = "proto3";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "asyncapi.glee";
option java_outer_classname = "GleeRuntimeProto";
option objc_class_prefix = "HLW";

package asyncapi.glee;

// The greeting service definition.
service Glee {
	rpc SayGleeRegisterFunction (RegisterFunctionRequest) returns (RegisterFunctionResponse) {}
	rpc SayGleeTriggerFunction (TriggerFunctionRequest) returns (TriggerFunctionResponse) {}
	rpc SayGleeTriggerLifecycle (TriggerLifecycleHookRequest) returns (TriggerLifecycleHookResponse) {}
	rpc SayGleeRegisterLifecycle (RegisterLifecycleHookRequest) returns (RegisterLifecycleHookResponse) {}
}

message RegisterFunctionRequest {
	string content = 1;
	string filename = 2;
}
message RegisterFunctionResponse {
	oneof error { bytes errorBytesValue = 1; string errorStringValue = 2; double errorDoubleValue = 3; google.protobuf.Any errorGoogleProtobufAnyValue = 4; bool errorBoolValue = 5;  int64 errorInt64Value = 6; }
	string errorMessage = 7;
}
message TriggerFunctionRequest {
	oneof event { bytes eventBytesValue = 1; string eventStringValue = 2; double eventDoubleValue = 3; google.protobuf.Any eventGoogleProtobufAnyValue = 4; bool eventBoolValue = 5;  int64 eventInt64Value = 6; }
}
message TriggerFunctionResponse {
	repeated Message send = 1;
	repeated Message reply = 2;
	repeated Message broadcast = 3;
}
message Message {
	oneof payload { bytes payloadBytesValue = 1; string payloadStringValue = 2; double payloadDoubleValue = 3; google.protobuf.Any payloadGoogleProtobufAnyValue = 4; bool payloadBoolValue = 5;  int64 payloadInt64Value = 6; }
	oneof headers { bytes headersBytesValue = 7; string headersStringValue = 8; double headersDoubleValue = 9; google.protobuf.Any headersGoogleProtobufAnyValue = 10; bool headersBoolValue = 11;  int64 headersInt64Value = 12; }
	string channel = 13;
	string server = 14;
}
message TriggerLifecycleHookRequest {
	string lifecycle = 1;
	string serverName = 2;
	oneof server { bytes serverBytesValue = 3; string serverStringValue = 4; double serverDoubleValue = 5; google.protobuf.Any serverGoogleProtobufAnyValue = 6; bool serverBoolValue = 7;  int64 serverInt64Value = 8; }
	oneof connection { bytes connectionBytesValue = 9; string connectionStringValue = 10; double connectionDoubleValue = 11; google.protobuf.Any connectionGoogleProtobufAnyValue = 12; bool connectionBoolValue = 13;  int64 connectionInt64Value = 14; }
	oneof glee { bytes gleeBytesValue = 15; string gleeStringValue = 16; double gleeDoubleValue = 17; google.protobuf.Any gleeGoogleProtobufAnyValue = 18; bool gleeBoolValue = 19;  int64 gleeInt64Value = 20; }
}
message TriggerLifecycleHookResponse {
	oneof error { bytes errorBytesValue = 1; string errorStringValue = 2; double errorDoubleValue = 3; google.protobuf.Any errorGoogleProtobufAnyValue = 4; bool errorBoolValue = 5;  int64 errorInt64Value = 6; }
	string errorMessage = 7;
	repeated Message send = 8;
	repeated Message reply = 9;
	repeated Message broadcast = 10;
}
message RegisterLifecycleHookRequest {
	string content = 1;
	string filename = 2;
}
message RegisterLifecycleHookResponse {
	oneof error { bytes errorBytesValue = 1; string errorStringValue = 2; double errorDoubleValue = 3; google.protobuf.Any errorGoogleProtobufAnyValue = 4; bool errorBoolValue = 5;  int64 errorInt64Value = 6; }
	string errorMessage = 7;
}


